[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "image-ideation-app"
version = "1.0.0"
description = "Streamlit app for turning uploaded images into new AI-generated images with OpenAI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "streamlit",
  "openai",
  "python-dotenv",
  "pillow",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
main = "image_ideation.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/image_ideation"]

[tool.ruff]
target-version = "py313"
line-length = 100

